fix overflow problem on mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body{
   @apply bg-violet-700;
 }
 
+html{
+  @apply overflow-y-hidden
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
